--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -1,7 +1,12 @@
 name: Run tests and upload coverage
 
-on: 
-  push
+on:
+  push:
+    branches:
+      - master
+  pull_request:
+    branches:
+      - master
 
 jobs:
   test:
@@ -17,11 +22,13 @@ jobs:
         uses: actions/setup-python@v4
 
       - name: Install dependencies
-        run: pip install pytest pytest-cov
-             pip install coverage
+        run: |
+            pip install pytest pytest-cov
+            pip install coverage
 
       - name: Run tests
-        run: coverage run -m unittest discover ./tests
+        run: |
+             coverage run -m unittest discover ./tests
              coverage html
              coverage xml
 
