commit prueba coverage 3

--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -1,4 +1,4 @@
-name: Run tests and upload coverage
+ename: Run tests and upload coverage
 
 on:
   push:
@@ -28,9 +28,9 @@ jobs:
 
       - name: Run tests
         run: |
-             coverage run -m unittest discover ./tests
-             coverage html
-             coverage xml
+              coverage run -m unittest discover .
+              coverage html
+              coverage xml
 
       - name: Upload results to Codecov
         uses: codecov/codecov-action@v5
