--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Run tests
         run: |
-              coverage run -m unittest discover .
+              coverage run -m unittest discover ./tests
               coverage html
               coverage xml
 
